added enable/disable gcode

--- a/ConfigSamples/Snippets/switchwatchdog.config
+++ b/ConfigSamples/Snippets/switchwatchdog.config
@@ -1,19 +1,26 @@
 // example config for the switchwatchdog
 //
 // this module can be used to configure a watchdog
-// that observes a specific pin to have a certain value
+// that observes a specific pin to have a certain value.
+//
+// enable it in your gcode with <enable_gcode>
 // when the pin enters the invalid state (low), 
 // the timeout starts to count down.
 //
-// once expired this module triggers the exec_command
+// once expired this module triggers the <exec_gcode>
 //
-// the timer can be reset by two causes:
+// the timer can be reset by three causes:
 // 1) the pin enters the valid high state again
-// 2) the user/gcode sends the specified clear_command
+// 2) the user/gcode sends the specified <clear_gcode>
+// 3) the user/gcode sends the another activate command <enable_gcode>
 //
-switchwatchdog.enable              true
-switchwatchdog.laser.pin           0.12!
-switchwatchdog.laser.timeout       5
-switchwatchdog.laser.exec_command  suspend
-switchwatchdog.laser.clear_command M777
+// do not forget to disable when your gcode is done (send <disable_gcode>)
+//
+switchwatchdog.enable                 true
+switchwatchdog.laser.pin              0.12!
+switchwatchdog.laser.timeout          5
+switchwatchdog.laser.exec_command     suspend
+switchwatchdog.laser.enable_gcode     M770
+switchwatchdog.laser.disable_gcode    M771
+switchwatchdog.laser.clear_gcode      M777
 
