--- a/ConfigSamples/Snippets/switchwatchdog.config
+++ b/ConfigSamples/Snippets/switchwatchdog.config
@@ -16,7 +16,7 @@
 //
 // do not forget to disable when your gcode is done (send <disable_gcode>)
 //
-switchwatchdog.enable                 true
+switchwatchdog.laser.enable           true
 switchwatchdog.laser.pin              0.12!
 switchwatchdog.laser.timeout          5
 switchwatchdog.laser.exec_command     suspend
